nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: ${#toInt( parameters.replicas )}
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-default
          image: "echenarmory/nginx_default:1.2"
          ports:
            - containerPort: 80
      containers:
        - name: nginx-blue
          image: "echenarmory/nginx_blue:1.1"
          ports:
            - containerPort: 80
      containers:
        - name: nginx-green
          image: "echenarmory/nginx_green:1.1"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec: 
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
