ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-default
  annotations:
#    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: echen.se.armory.io
    - http:
        paths:
        - backend:
            serviceName: nginx-default
            servicePort: 80
          path: /nginx-default
        - backend:
            serviceName: nginx-blue
            servicePort: 80
          path: /nginx-blue
        - backend:
            serviceName: nginx-green
            servicePort: 80
          path: /nginx-green
status:
  loadBalancer:
    ingress:
    - hostname: abe11c1fe5a6211eab53706f3d4e40e5-469969934.us-west-2.elb.amazonaws.com
